Rename source and binary packages so they don't conflict with old media scanner.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mediascanner (0.99-0ubuntu1) UNRELEASED; urgency=low
+mediascanner2.0 (0.99-0ubuntu1) UNRELEASED; urgency=low
 
   * Hot new stuff
 
