--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+mediascanner2 (0.101-0ubuntu1) UNRELEASED; urgency=low
+
+  [ James Henstridge ]
+  * Get rid of the direct constructor for MediaFile, forcing creation to 
+    go through MediaFileBuilder (which won't break when we add more 
+    metadata fields).
+    Also move MediaFile fields to a private struct to avoid breaking ABI 
+    in future when adding new metadata fields.
+  * Add a D-Bus service exposing the MediaStore, and move the QML binding 
+    over to using it.
+  * Limit access to the MediaScanner D-Bus interface from confined
+    processes.
+    The trust-store API does not exist yet, so it just hard codes support 
+    for the "com.ubuntu.music" application.
+
+  [ Jussi Pakkanen ]
+  * Add support for .nomedia files to prevent chosen subtrees from being 
+    scanned. (LP: #1294303)
+  * Fix a few warnings emitted by clang.
+  * Guard against empty MediaFileBuilders.
+  * Fix CMake Project name.
+  * Prune those files that have a scan block file on their path when 
+    restoring.
+
+
+ -- James Henstridge <james.henstridge@canonical.com>  Thu, 29 May 2014 12:23:07 +0200
+
 mediascanner2 (0.100+14.10.20140508-0ubuntu1) utopic; urgency=low
 
   [ James Henstridge ]
