--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+mediascanner2 (0.101+14.10.20140627-0ubuntu2) utopic; urgency=medium
+
+  * debian/usr.bin.mediascanner-service-2.0: couple more minor updates for
+    (mostly) noisy denials
+    - use consoles abstraction instead of just the pts interface since we need
+      /dev/tty when crashing
+    - finetune orcexec rules by allowing 'm' in /tmp but explicitly deny the
+      others
+    - allow non-owner read of @{PROC}/cmdline
+    - use attach_disconnected for /dev/socket/property_service
+
+ -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 27 Jun 2014 14:59:34 -0500
+
 mediascanner2 (0.101+14.10.20140627-0ubuntu1) utopic; urgency=medium
 
   [ Jussi Pakkanen ]
