--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mediascanner2 (0.101+14.10.20140627-0ubuntu3) UNRELEASED; urgency=medium
+mediascanner2 (0.101+14.10.20140627-0ubuntu3) utopic; urgency=medium
 
   * apparmor: add missing proc file used by the mediatek soc
 
