--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mediascanner2 (0.105-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Record whether files contain embedded artwork in the media index.
+  * Use this info to generate art URIs that either use embedded artwork,
+    or the network based albumart provider.
+
+ -- James Henstridge <james.henstridge@canonical.com>  Fri, 29 Aug 2014 18:13:29 +0800
+
 mediascanner2 (0.104+14.10.20140825-0ubuntu1) utopic; urgency=medium
 
   [ James Henstridge ]
