Move the mediascanner-service-2.0 executable out of /usr/bin, since it is not intended to be executed directly.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ mediascanner2 (0.108-0ubuntu1) UNRELEASED; urgency=medium
 
   * Rename QML plugin package to qml-module-* and add transitional package
     for upgrades. (LP: #1342031)
+  * Move the mediascanner-service-2.0 executable out of /usr/bin, since it
+    is not intended to be executed directly.
 
  -- James Henstridge <james.henstridge@canonical.com>  Thu, 08 Oct 2015 12:18:08 +0800
 
