--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mediascanner2 (0.109-0ubuntu1) UNRELEASED; urgency=medium
+
+  * If a folder contains an image file named
+    {cover,album,albumart,.folder,folder}.{jpeg,jpg,png} use it as album
+    art for songs in preference to online art if the songs do not have
+    embedded art. (LP: #1372000)
+
+ -- James Henstridge <james.henstridge@canonical.com>  Mon, 23 Nov 2015 11:12:59 +0800
+
 mediascanner2 (0.108+16.04.20151109-0ubuntu1) xenial; urgency=medium
 
   * Move the metadata extractor to a separate process to isolate bugs in
